--- a/app/assets/stylesheets/todo_lists.css.scss
+++ b/app/assets/stylesheets/todo_lists.css.scss
@@ -22,7 +22,7 @@
 .todo-lists-icons {
 	color: #5D5D5D;
 	font-size: 1.000em;
-	text-align: right;
+	text-align: left;
 	letter-spacing: 0.075em;
 	padding: 5px;
 	margin: 10px 0 20px 0px;
